agregue endpoints para lista A-z para poner asistencia desde lista,etc